--- a/war/pom.xml
+++ b/war/pom.xml
@@ -267,9 +267,21 @@ THE SOFTWARE.
                 </artifactItem>
 		<!-- DEV at cloud plugins -->
 		<artifactItem>
-		  <groupId>org.jenkinsci.plugins</groupId>
+		  <groupId>org.jenkins-ci.plugins</groupId>
 		  <artifactId>git</artifactId>
-		  <version>1.1.26</version>
+		  <version>2.3.5</version>
+		  <type>hpi</type>
+		</artifactItem>
+		<artifactItem>
+		  <groupId>org.jenkins-ci.plugins</groupId>
+		  <artifactId>scm-api</artifactId>
+		  <version>0.2</version>
+		  <type>hpi</type>
+		</artifactItem>
+		<artifactItem>
+		  <groupId>org.jenkins-ci.plugins</groupId>
+		  <artifactId>git-client</artifactId>
+		  <version>1.16.1</version>
 		  <type>hpi</type>
 		</artifactItem>
 	      <!-- end DEV at cloud plugins -->
