--- a/war/pom.xml
+++ b/war/pom.xml
@@ -266,6 +266,26 @@ THE SOFTWARE.
                   <version>${maven-plugin.version}</version>
                   <type>hpi</type>
                 </artifactItem>
+                <!-- DEV at cloud plugins -->
+                <artifactItem>
+                  <groupId>org.jenkins-ci.plugins</groupId>
+                  <artifactId>git</artifactId>
+                  <version>2.3.5</version>
+                  <type>hpi</type>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>org.jenkins-ci.plugins</groupId>
+                  <artifactId>scm-api</artifactId>
+                  <version>0.2</version>
+                  <type>hpi</type>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>org.jenkins-ci.plugins</groupId>
+                  <artifactId>git-client</artifactId>
+                  <version>1.16.1</version>
+                  <type>hpi</type>
+                </artifactItem>
+                <!-- end of DEV at cloud plugins -->
                 <artifactItem>
                   <groupId>org.jenkins-ci.plugins</groupId>
                   <artifactId>ssh-slaves</artifactId>
