--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -12,7 +12,7 @@
   <groupId>org.jenkins-ci.plugins</groupId>
   <artifactId>plugin</artifactId>
   <name>Jenkins plugin POM</name>
-  <version>1.625.3</version>
+  <version>1.625.3.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <!--
@@ -38,22 +38,22 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.jenkins-ci.main</groupId>
+      <groupId>com.cloudbees.dev-at-cloud.main</groupId>
       <artifactId>jenkins-war</artifactId>
       <type>war</type>
-      <version>1.625.3</version>
+      <version>1.625.3.1-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.jenkins-ci.main</groupId>
+      <groupId>com.cloudbees.dev-at-cloud.main</groupId>
       <artifactId>jenkins-core</artifactId>
-      <version>1.625.3</version>
+      <version>1.625.3.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.jenkins-ci.main</groupId>
+      <groupId>com.cloudbees.dev-at-cloud.main</groupId>
       <artifactId>jenkins-test-harness</artifactId>
-      <version>1.625.3</version>
+      <version>1.625.3.1-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
     <!--
@@ -94,6 +94,8 @@
         <artifactId>maven-hpi-plugin</artifactId>
         <extensions>true</extensions>
         <configuration>
+          <jenkinsCoreId>com.cloudbees.dev-at-cloud.main:jenkins-core</jenkinsCoreId>
+          <jenkinsWarId>com.cloudbees.dev-at-cloud.main:jenkins-war</jenkinsWarId>
           <showDeprecation>true</showDeprecation>
           <contextPath>/jenkins</contextPath>
         </configuration>
@@ -338,9 +340,15 @@
       <url>gitsite:git@github.com/jenkinsci/maven-site.git:plugin-parent</url>
     </site>
     <snapshotRepository>
-      <id>maven.jenkins-ci.org</id>
-      <url>http://maven.jenkins-ci.org:8081/content/repositories/snapshots</url>
+      <id>cloudbees-internal-snapshots</id>
+      <name>CloudBees Internal Snapshots</name>
+      <url>https://cloudbees-jfrog.artifactoryonline.com/cloudbees_jfrog/snapshots</url>
     </snapshotRepository>
+    <repository>
+      <id>cloudbees-internal-staging</id>
+      <name>CloudBees Internal Release Repository</name>
+      <url>https://cloudbees-jfrog.artifactoryonline.com/cloudbees_jfrog/releases</url>
+    </repository>
   </distributionManagement>
 
   <profiles>
