--- a/core/pom.xml
+++ b/core/pom.xml
@@ -29,7 +29,7 @@ THE SOFTWARE.
   <parent>
     <groupId>org.jenkins-ci.main</groupId>
     <artifactId>pom</artifactId>
-    <version>1.580.13</version>
+    <version>1.580.14-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
