--- a/war/pom.xml
+++ b/war/pom.xml
@@ -28,7 +28,7 @@ THE SOFTWARE.
   <parent>
     <groupId>com.cloudbees.dev-at-cloud.main</groupId>
     <artifactId>pom</artifactId>
-    <version>1.609.1.1</version>
+    <version>1.609.1.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>jenkins-war</artifactId>
