--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.cloudbees.dev-at-cloud.main</groupId>
     <artifactId>pom</artifactId>
-    <version>1.609.4.3</version>
+    <version>1.609.4.4-SNAPSHOT</version>
   </parent>
 
   <artifactId>cli</artifactId>
