--- a/war/pom.xml
+++ b/war/pom.xml
@@ -28,7 +28,7 @@ THE SOFTWARE.
   <parent>
     <groupId>org.jenkins-ci.main</groupId>
     <artifactId>pom</artifactId>
-    <version>1.580.14-SNAPSHOT</version>
+    <version>1.580.14</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
