--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@ THE SOFTWARE.
 
   <groupId>com.cloudbees.dev-at-cloud.main</groupId>
   <artifactId>pom</artifactId>
-  <version>1.609.4.5-SNAPSHOT</version>
+  <version>1.609.4.5</version>
   <packaging>pom</packaging>
 
   <name>Jenkins main module</name>
@@ -58,7 +58,7 @@ THE SOFTWARE.
     <connection>scm:git:git://github.com/jenkinsci/jenkins.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/jenkinsci/jenkins.git</developerConnection>
     <url>https://github.com/jenkinsci/jenkins</url>
-    <tag>HEAD</tag>
+    <tag>dev-at-cloud-1.609.4.5</tag>
   </scm>
 
   <distributionManagement>
