--- a/core/pom.xml
+++ b/core/pom.xml
@@ -29,7 +29,7 @@ THE SOFTWARE.
   <parent>
     <groupId>org.jenkins-ci.main</groupId>
     <artifactId>pom</artifactId>
-    <version>1.609.15-SNAPSHOT</version>
+    <version>1.609.15</version>
   </parent>
 
   <artifactId>jenkins-core</artifactId>
