--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.jenkins-ci.main</groupId>
     <artifactId>pom</artifactId>
-    <version>1.609.16-SNAPSHOT</version>
+    <version>1.609.16</version>
   </parent>
 
   <artifactId>cli</artifactId>
