--- a/war/pom.xml
+++ b/war/pom.xml
@@ -28,7 +28,7 @@ THE SOFTWARE.
   <parent>
     <groupId>org.jenkins-ci.main</groupId>
     <artifactId>pom</artifactId>
-    <version>1.609.16-SNAPSHOT</version>
+    <version>1.609.16</version>
   </parent>
 
   <artifactId>jenkins-war</artifactId>
