--- a/test/pom.xml
+++ b/test/pom.xml
@@ -28,7 +28,7 @@ THE SOFTWARE.
   <parent>
     <groupId>org.jenkins-ci.main</groupId>
     <artifactId>pom</artifactId>
-    <version>1.625.16-SNAPSHOT</version>
+    <version>1.625.16</version>
   </parent>
 
   <artifactId>jenkins-test-harness</artifactId>
