[maven-release-plugin] prepare release dev-at-cloud-1.642.2.1

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -29,7 +29,7 @@ THE SOFTWARE.
   <parent>
     <groupId>com.cloudbees.dev-at-cloud.main</groupId>
     <artifactId>pom</artifactId>
-    <version>1.642.2.1-SNAPSHOT</version>
+    <version>1.642.2.1</version>
   </parent>
 
   <artifactId>jenkins-core</artifactId>
