Upgrade wizard base changes

--- a/core/src/main/resources/jenkins/install/pluginSetupWizard.properties
+++ b/core/src/main/resources/jenkins/install/pluginSetupWizard.properties
@@ -47,7 +47,16 @@ the administrator password you used to access the setup wizard.\
 installWizard_addFirstUser_title=Getting Started
 installWizard_configureProxy_label=Configure Proxy
 installWizard_configureProxy_save=Save and Continue
+installWizard_gettingStarted_title=Getting Started
+installWizard_saveSecurity=Save and Continue
 installWizard_skipPluginInstallations=Skip Plugin Installations
 installWizard_installIncomplete_dependenciesLabel=Dependencies
 installWizard_installingConsole_dependencyIndicatorNote=** - required dependency
 installWizard_retry=Retry
+setupWizard_upgradePanel_title=Upgrade
+setupWizard_upgradePanel_banner=Welcome to Jenkins 2!
+setupWizard_upgradePanel_message=Jenkins 2 includes some great new features we think you'll love to use. Get your instance updated to the latest \
+and greatest plugins available and take advantage of them!
+setupWizard_upgradePanel_recommendedActionTitle=Install Recommended Plugins
+setupWizard_upgradePanel_recommendedActionDetails=Install the recommended plugins
+setupWizard_upgradePanel_skipRecommendedPlugins=No thanks
