Upgrade wizard mostly complete

--- a/core/src/main/resources/jenkins/install/pluginSetupWizard.properties
+++ b/core/src/main/resources/jenkins/install/pluginSetupWizard.properties
@@ -54,10 +54,17 @@ installWizard_installIncomplete_dependenciesLabel=Dependencies
 installWizard_installingConsole_dependencyIndicatorNote=** - required dependency
 installWizard_websiteLinkLabel=Website
 installWizard_retry=Retry
-setupWizard_upgradePanel_title=Upgrade
-setupWizard_upgradePanel_banner=Welcome to Jenkins 2!
-setupWizard_upgradePanel_message=Jenkins 2 includes some great new features we think you'll love to use. Get your instance updated to the latest \
+installWizard_upgradePanel_title=Upgrade
+installWizard_upgradePanel_banner=Welcome to Jenkins 2!
+installWizard_upgradePanel_message=Jenkins 2 includes some great new features we think you'll love to use. Get your instance updated to the latest \
 and greatest plugins available and take advantage of them!
-setupWizard_upgradePanel_recommendedActionTitle=Install Recommended Plugins
-setupWizard_upgradePanel_recommendedActionDetails=Install the recommended plugins
-setupWizard_upgradePanel_skipRecommendedPlugins=No thanks
+installWizard_upgradePanel_recommendedActionTitle=Install Recommended Plugins
+installWizard_upgradePanel_recommendedActionDetails=Install the recommended plugins
+installWizard_upgradePanel_skipRecommendedPlugins=No thanks
+installWizard_upgradeComplete_title=Upgrade
+installWizard_pluginsInstalled_banner=Welcome to Jenkins 2!
+installWizard_upgradeComplete_message=Congratulations! You've upgraded to Jenkins 2! <a href="http://jenkins.io">Click here to learn more about all the great new features you now have available!</a>
+installWizard_upgradeSkipped_title=Upgrade
+installWizard_upgradeSkipped_banner=Features Not Installed
+installWizard_upgradeSkipped_message=<div class="alert alert-warning fade in">You've decided to skip updating to the great features in Jenkins 2.</div> <p><a href="http://jenkins.io">Click here to learn what you're missing</a>!</p>
+installWizard_upgradeSkipped_continueAnyway=Continue Anyway
