--- a/core/src/main/resources/jenkins/install/UpgradeWizard/footer.properties
+++ b/core/src/main/resources/jenkins/install/UpgradeWizard/footer.properties
@@ -1,3 +1,3 @@
 msg.before=Welcome to Jenkins 2!\u0020
-msg.link=Install new features
-msg.after=\u0020to complete the upgrade
+msg.link=Upgrade now
+msg.after=\u0020to get the new features
