Misc upgrade wizard fixes

--- a/core/src/main/resources/jenkins/install/pluginSetupWizard.properties
+++ b/core/src/main/resources/jenkins/install/pluginSetupWizard.properties
@@ -67,8 +67,8 @@ installWizard_upgradePanel_recommendedActionDetails=Install the recommended plug
 installWizard_upgradePanel_skipRecommendedPlugins=No thanks
 installWizard_upgradeComplete_title=Upgrade
 installWizard_pluginsInstalled_banner=Welcome to Jenkins 2!
-installWizard_upgradeComplete_message=Congratulations! You've upgraded to Jenkins 2! <a href="http://jenkins.io">Click here to learn more about all the great new features you now have available!</a>
+installWizard_upgradeComplete_message=Congratulations! You've upgraded to Jenkins 2.</p><p>To learn more about the great new features, visit <a target="_blank" href="https://jenkins.io/2.0/">the Jenkins 2 website</a>!
 installWizard_upgradeSkipped_title=Upgrade
 installWizard_upgradeSkipped_banner=Features Not Installed
-installWizard_upgradeSkipped_message=<div class="alert alert-warning fade in">You've decided to skip updating to the great features in Jenkins 2.</div> <p><a href="http://jenkins.io">Click here to learn what you're missing</a>!</p>
+installWizard_upgradeSkipped_message=<div class="alert alert-warning fade in">You've decided to skip updating to the great features in Jenkins 2.</div></p><p><a target="_blank" href="https://jenkins.io/2.0/">Click here to learn what you're missing</a>!
 installWizard_upgradeSkipped_continueAnyway=Continue Anyway
