--- a/core/src/main/resources/jenkins/install/pluginSetupWizard.properties
+++ b/core/src/main/resources/jenkins/install/pluginSetupWizard.properties
@@ -19,7 +19,7 @@ installWizard_error_connection=Unable to connect to Jenkins
 installWizard_installCustom_title=Getting Started
 installWizard_installCustom_selectAll=All
 installWizard_installCustom_selectNone=None
-installWizard_installCustom_selectRecommended=Recommended
+installWizard_installCustom_selectRecommended=Suggested
 installWizard_installCustom_selected=Selected
 installWizard_installCustom_dependenciesPrefix=Dependencies
 installWizard_installCustom_pluginListDesc=Note that the full list of plugins is not shown here. Additional plugins can be installed in the <strong>Plugin Manager</strong> once the initial setup is complete. <a href="https://wiki.jenkins-ci.org/display/JENKINS/Installing+Jenkins#InstallingJenkins-InstallationWizard" target="_blank">See the Wiki for more information</a>.
@@ -60,15 +60,14 @@ installWizard_continue=Continue
 installWizard_retry=Retry
 installWizard_upgradePanel_title=Upgrade
 installWizard_upgradePanel_banner=Welcome to Jenkins 2!
-installWizard_upgradePanel_message=Jenkins 2 includes some great new features we think you'll love to use. Get your instance updated to the latest \
-and greatest plugins available and take advantage of them!
-installWizard_upgradePanel_recommendedActionTitle=Install Recommended Plugins
-installWizard_upgradePanel_recommendedActionDetails=Install the recommended plugins
+installWizard_upgradePanel_message=Jenkins 2 includes some great new features that we think you'll love, install these additional plugins to take advantage of them!
+installWizard_upgradePanel_recommendedActionTitle=Install Suggested Plugins
+installWizard_upgradePanel_recommendedActionDetails=Install the suggested plugins
 installWizard_upgradePanel_skipRecommendedPlugins=No thanks
 installWizard_upgradeComplete_title=Upgrade
 installWizard_pluginsInstalled_banner=Welcome to Jenkins 2!
-installWizard_upgradeComplete_message=Congratulations! You've upgraded to Jenkins 2.</p><p>To learn more about the great new features, visit <a target="_blank" href="https://jenkins.io/2.0/">the Jenkins 2 website</a>!
+installWizard_upgradeComplete_message=Congratulations! You have upgraded to Jenkins 2.</p><p>To learn more about the great new features, visit <a target="_blank" href="https://jenkins.io/2.0/">the Jenkins 2 website</a>!
 installWizard_upgradeSkipped_title=Upgrade
 installWizard_upgradeSkipped_banner=Features Not Installed
-installWizard_upgradeSkipped_message=<div class="alert alert-warning fade in">You've decided to skip updating to the great features in Jenkins 2.</div></p><p><a target="_blank" href="https://jenkins.io/2.0/">Click here to learn what you're missing</a>!
+installWizard_upgradeSkipped_message=<div class="alert alert-warning fade in"><a target="_blank" href="https://jenkins.io/2.0/">Click here</a> to learn what you're missing!</div>
 installWizard_upgradeSkipped_continueAnyway=Continue Anyway
