Address upgrade wizard issues: add close button, change text, install specific plugins vs. initial recommended set

--- a/core/src/main/resources/jenkins/install/pluginSetupWizard.properties
+++ b/core/src/main/resources/jenkins/install/pluginSetupWizard.properties
@@ -71,3 +71,5 @@ installWizard_upgradeSkipped_title=Upgrade
 installWizard_upgradeSkipped_banner=Features Not Installed
 installWizard_upgradeSkipped_message=<div class="alert alert-warning fade in"><a target="_blank" href="https://jenkins.io/2.0/">Click here</a> to learn what you're missing!</div>
 installWizard_upgradeSkipped_continueAnyway=Continue Anyway
+installWizard_upgrading_title=Installing plugins
+installWizard_upgradeComplete_finishButtonLabel=Finish
