--- a/pom.xml
+++ b/pom.xml
@@ -64,12 +64,12 @@ THE SOFTWARE.
     <snapshotRepository>
       <id>cloudbees-internal-snapshots</id>
       <name>CloudBees Internal Snapshots</name>
-      <url>https://nexus-internal.cloudbees.com/content/repositories/snapshots</url>
+      <url>${cloudbeesInternalDistMgmtSnapshotsUrl}</url>
     </snapshotRepository>
     <repository>
       <id>cloudbees-internal-staging</id>
       <name>CloudBees Internal Release Repository</name>
-      <url>https://nexus-internal.cloudbees.com/service/local/staging/deploy/maven2</url>
+      <url>${cloudbeesInternalDistMgmtReleasesUrl}</url>
     </repository>
   </distributionManagement>
 
@@ -104,6 +104,8 @@ THE SOFTWARE.
     <test-annotations.version>1.2</test-annotations.version>
 
     <java.level>7</java.level>
+    <cloudbeesInternalDistMgmtSnapshotsUrl>https://nexus-internal.cloudbees.com/content/repositories/snapshots</cloudbeesInternalDistMgmtSnapshotsUrl>
+    <cloudbeesInternalDistMgmtReleasesUrl>https://nexus-internal.cloudbees.com/service/local/staging/deploy/maven2</cloudbeesInternalDistMgmtReleasesUrl>
 
     <changelog.url>https://jenkins-ci.org/changelog</changelog.url>
   </properties>
