[OSS-861] Use properties for Nexus URLs (plugin pom)

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -425,12 +425,12 @@
     <snapshotRepository>
       <id>cloudbees-internal-snapshots</id>
       <name>CloudBees Internal Snapshots</name>
-      <url>https://cloudbees-jfrog.artifactoryonline.com/cloudbees_jfrog/snapshots</url>
+      <url>${cloudbeesInternalDistMgmtSnapshotsUrl}</url>
     </snapshotRepository>
     <repository>
       <id>cloudbees-internal-staging</id>
       <name>CloudBees Internal Release Repository</name>
-      <url>https://cloudbees-jfrog.artifactoryonline.com/cloudbees_jfrog/releases</url>
+      <url>${cloudbeesInternalDistMgmtReleasesUrl}</url>
     </repository>
   </distributionManagement>
 
