--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.cloudbees.dev-at-cloud.main</groupId>
     <artifactId>pom</artifactId>
-    <version>1.651.2.1-SNAPSHOT</version>
+    <version>1.651.2.1</version>
   </parent>
 
   <artifactId>cli</artifactId>
