--- a/test/pom.xml
+++ b/test/pom.xml
@@ -28,7 +28,7 @@ THE SOFTWARE.
   <parent>
     <groupId>com.cloudbees.dev-at-cloud.main</groupId>
     <artifactId>pom</artifactId>
-    <version>1.651.2.1-SNAPSHOT</version>
+    <version>1.651.2.1</version>
   </parent>
 
   <artifactId>test</artifactId>
